# NFCDoorAccess

./: CMakeLists.txt  CMakeSettings.json  README.md  gitup.bat
DatabaseGateway/: CMakeLists.txt  DatabaseGateway.vcxproj
DatabaseGateway/include/: DatabaseObject.hpp  DatabaseRequest.hpp  ValidationUtils.hpp
DatabaseGateway/res/: Database_11032021.db
DatabaseGateway/src/: DatabaseGateway.cpp  DatabaseGateway.cpp.old  DatabaseObject.cpp  DatabaseRequest.cpp
DatabaseTables/: CMakeLists.txt
DatabaseTables/include/: Tables.hpp
DatabaseTables/src/: CommandsTable.cpp  EmployeesTable.cpp  KeypadPassTable.cpp  LogTable.cpp  RFIDCardTable.cpp  WebAPITable.cpp
ErrorCodes/: CMakeLists.txt  ErrorCodes.vcxproj
ErrorCodes/include/: errorCodes.h  errorTemplates.h
FIFO_Pipe/: CMakeLists.txt  FIFO_Pipe.vcxproj
FIFO_Pipe/include/: pipe.hpp
FIFO_Pipe/src/: pipe.cpp
GPIO/: CMakeLists.txt  GPIO.vcxproj
GPIO/include/: rpi_gpio.h
GPIO/src/: rpi_gpio.c
GlobalProperties/: CMakeLists.txt
GlobalProperties/include/: propertiesclass.h
GlobalProperties/res/: config.xml
GlobalProperties/src/: propertiesclass.cpp
HardwareDaemon/: CMakeLists.txt  HardwareDaemon.vcxproj  README.md
HardwareDaemon/include/: InputAutomaton.hpp  InputController.hpp
HardwareDaemon/src/: Hardwared.cpp  InputAutomaton.cpp  InputController.cpp
IndicatorController/: CMakeLists.txt  IndicatorController.vcxproj
IndicatorController/include/: BuzzerController.hpp  DoorController.hpp  I2C_LCD_Controller.hpp  IndicatorController.hpp
IndicatorController/src/: BuzzerController.cpp  DoorController.cpp  I2C_LCD_Controller.cpp  IndicatorController.cpp
Kernel/: CMakeLists.txt  Kernel.vcxproj
Kernel/include/: Kernel.hpp
Kernel/src/: Kernel.cpp
Keypad/: CMakeLists.txt  Keypad.vcxproj
Keypad/include/: keypad.hpp
Keypad/src/: keypad.cpp
Logger/: CMakeLists.txt  Logger.vcxproj
Logger/include/: ILogger.hpp  Logger.hpp  LoggerToStdout.hpp  NulLogger.hpp  ThreadLoggerClient.hpp  ThreadLoggerServer.hpp
Logger/src/: Logger.cpp  NulLogger.cpp  ThreadLoggerClient.cpp  ThreadLoggerServer.cpp
Mailbox/: CMakeLists.txt  Mailbox.vcxproj
Mailbox/include/: DataMailbox.hpp
Mailbox/src/: DataMailbox.cpp
MailboxAPI/: CMakeLists.txt  MailboxAPI.vcxproj
MailboxAPI/include/: MailboxReference.hpp  SimplifiedMailbox.hpp  SimplifiedMailboxEnums.hpp  mailbox.hpp
MailboxAPI/src/: MailboxReference.cpp  SimplfiedMailbox.cpp.old  SimplifiedMailbox.cpp  mailbox.cpp
MailboxAutomaton/: CMakeLists.txt  MailboxAutomaton.vcxproj
MailboxAutomaton/include/: MailboxAutomaton.hpp
MailboxAutomaton/src/: MailboxAutomaton.cpp
MainApplication/: CMakeLists.txt  MainApplication.vcxproj
MainApplication/include/: AutomatonPairFactory.hpp  KeypadAutomaton.hpp  MainAutomaton.hpp  TransitionInfo.hpp
MainApplication/src/: KeypadAutomaton.cpp  MainApplication.cpp  MainApplication.cpp.old  MainAutomaton.cpp
MealyAutomaton/: CMakeLists.txt  MealyAutomaton.vcxproj
MealyAutomaton/include/: mautomat.h  mautomatfunctor.h
MealyAutomaton/src/: mautomat.cpp
PN532_NFC_Driver/: CMakeLists.txt  PN532_NFC_Driver.vcxproj  README.md
PN532_NFC_Driver/include/: PN532_NFC.hpp
PN532_NFC_Driver/src/: PN532_NFC.cpp
ProcessManager/: CMakeLists.txt  ProcessManager.vcxproj
ProcessManager/include/: IProcess.hpp  Process.hpp  ProcessManager.hpp  ProcessStatus.hpp
ProcessManager/src/: Process.cpp  ProcessManager.cpp
RFIDController/: CMakeLists.txt  RFIDController.vcxproj
RFIDController/include/: RFID_Controller.hpp
RFIDController/src/: RFID_Controller.cpp
RPi_RFID/: CMakeLists.txt  RPi_RFID.vcxproj
SQLite3_Database/: CMakeLists.txt  SQLite3_Database.vcxproj
SQLite3_Database/include/: Database.hpp  Statement.hpp
SQLite3_Database/src/: Database.cpp
SQLite3_Linux/: CMakeLists.txt  SQLite3_Linux.vcxproj
Settings/: CMakeLists.txt  Settings.vcxproj
Settings/include/: Settings.hpp
SharedMemory/: CMakeLists.txt  SharedMemory.vcxproj
SharedMemory/include/: SharedMemory.hpp
Startup/: CMakeLists.txt  Startup.vcxproj  run.sh
Startup/src/: startup.cpp
TestPrograms/: CMakeLists.txt  TestPrograms.vcxproj
TestPrograms/functionalityTests/: DataMailboxTest.cpp  DatabaseInsertProfilingTest.cpp  DateTimeTest.cpp  HardwareUtilsTest.cpp  LibFreeFareTest.cpp  Logger_wSizeGuard_Test.cpp  MailboxReferenceReconstruction.cpp  PN532_test.cpp  PipeNonblockingTest.cpp  ProcessManagerDestructorDoubleFree.cpp  RFID_ReadUIDTest.cpp  SignalHandlingTest_Flag.cpp  SimplifiedMailboxTest.cpp  SimplifiedMailboxTest_Receiver.cpp  SimplifiedMailboxTest_Sender.cpp  TablesTest.cpp  TimerTest.cpp  WatchdogServerTest.cpp  WatchdogServerTest_wProcessManager.cpp  WatchdogServerTest_wProcessManager_Client.cpp  WatchdogServerTest_wProcessManager_ClientWorking.cpp
Time/: CMakeLists.txt  Time.vcxproj
Time/include/: Time.hpp  Timer.hpp  Timezones.hpp
Time/src/: Time.cpp  Timer.cpp
UNIX_SignalHandler/: CMakeLists.txt  UNIX_SIgnalHandler.vcxproj
UNIX_SignalHandler/include/: UNIX_SignalHandler.hpp
UNIX_SignalHandler/src/: UNIX_SignalHandler.cpp
Watchdog/: CMakeLists.txt  Watchdog.vcxproj
Watchdog/include/: WatchdogClient.hpp  WatchdogServer.hpp  WatchdogSettings.hpp
Watchdog/include/.old/: IWatchdogSlot.hpp  WatchdogClient.hpp  WatchdogServer.hpp
Watchdog/src/: WatchdogClient.cpp  WatchdogServer.cpp  WatchdogSettings.cpp
Watchdog/src/.old/: IWatchdogSlot.cpp  WatchdogClient.cpp  WatchdogServer.cpp
WebAPI/: CMakeLists.txt  WebAPI.vcxproj
WebAPI/nodejs/: index.js
WebAPI/src/: WebAPIController.cpp
test/Kernel/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Kernel.sln  KernelLib.vcxproj  KernelLib.vcxproj.filters  cmake_install.cmake
test/Logger/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Logger.sln  LoggerLib.vcxproj  LoggerLib.vcxproj.filters  NulLoggerLib.vcxproj  NulLoggerLib.vcxproj.filters  cmake_install.cmake
test/ProcessManager/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ProcessLib.vcxproj  ProcessLib.vcxproj.filters  ProcessManager.sln  ProcessManagerLib.vcxproj  ProcessManagerLib.vcxproj.filters  (+1 more)
(+24 files in other folders)
